# rust-pico-waveshare-1-3inch-lcd

./: Cargo.toml  README.md
.cargo/: config.toml
logic_analyzer/: spi_logic_analysis_10kHz.pvs  spi_logic_analysis_10kHz.sr
src/: main.rs
