# see https://qiita.com/ochaochaocha3/items/1969d76debd6d3b42269
# see https://ushitora.net/archives/2805
# see https://ushitora.net/archives/2617#toc16
# see https://www.waveshare.com/pico-lcd-1.3.htm
# see https://www.waveshare.com/wiki/Pico-LCD-1.3
# see https://github.com/Floyd-Fish/ST7789-STM32/blob/master/ST7789/st7789.h
# see https://github.com/Floyd-Fish/ST7789-STM32/blob/master/ST7789/st7789.c

[package]
authors = ["shts"]
edition = "2018"
readme = "README.md"
name = "pico-waveshare-1-3inch-lcd"
version = "0.1.0"
resolver = "2"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

panic-halt= "0.2.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
numtoa = "0.2.4"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.3.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.2.0"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.4.0", features=["rt"] }
rp2040-boot2 = "0.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
